--- a/style.css
+++ b/style.css
@@ -86,3 +86,16 @@ h2::before{
     cursor: pointer;
     padding: 10px;
 }
+.signup_link{
+    font-size: 20px;
+    margin-top: 30px;
+    width: 100%;
+    text-align: center;
+}
+.signup_link a{
+    color: #000;
+    text-decoration: none;
+}
+.signup_link a:hover{
+    color: #63490f;
+}
